Added loading of material colors from mesh. If a mesh contains multiple materials then mesh is split into new meshes such that each mesh has only one material.

--- a/VulkanRendererRT.vcxproj.filters
+++ b/VulkanRendererRT.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="dependencies\tinyobjloader-release-7212023\tiny_obj_loader.cc">
       <Filter>Dependencies</Filter>
     </ClCompile>
+    <ClCompile Include="stb_image_impl.cpp">
+      <Filter>Dependencies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="vulkan_renderer.h">
