--- a/VulkanRendererRT.vcxproj
+++ b/VulkanRendererRT.vcxproj
@@ -79,12 +79,12 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>dependencies/imgui-1.89.4/backends/;dependencies/imgui-1.89.4/;dependencies/glm-0.9.9.8/;dependencies/vk-bootstrap-0.7/;dependencies/glfw-3.3.8.bin.WIN64/include/;dependencies/VulkanSDK-1.3.250.1/include/;dependencies/tinyobjloader-release-7212023/;dependencies/VulkanMemoryAllocator-3.0.1/;dependencies/meshoptimizer-0.19/;$(IncludePath);$(IncludePath)</IncludePath>
+    <IncludePath>dependencies/imgui-1.89.4/backends/;dependencies/imgui-1.89.4/;dependencies/glm-0.9.9.8/;dependencies/vk-bootstrap-0.7/;dependencies/glfw-3.3.8.bin.WIN64/include/;dependencies/VulkanSDK-1.3.250.1/include/;dependencies/tinyobjloader-release-7212023/;dependencies/VulkanMemoryAllocator-3.0.1/;dependencies/meshoptimizer-0.19/;dependencies/stb-image-2.28/;$(IncludePath);$(IncludePath)</IncludePath>
     <LibraryPath>dependencies/glfw-3.3.8.bin.WIN64/lib-vc2019/;dependencies/VulkanSDK-1.3.250.1/;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>dependencies/imgui-1.89.4/backends/;dependencies/imgui-1.89.4/;dependencies/glm-0.9.9.8/;dependencies/vk-bootstrap-0.7/;dependencies/glfw-3.3.8.bin.WIN64/include/;dependencies/VulkanSDK-1.3.250.1/include/;dependencies/tinyobjloader-release-7212023/;dependencies/VulkanMemoryAllocator-3.0.1/;dependencies/meshoptimizer-0.19/;$(VC_IncludePath);$(WindowsSDK_IncludePath);;$(IncludePath)</IncludePath>
+    <IncludePath>dependencies/imgui-1.89.4/backends/;dependencies/imgui-1.89.4/;dependencies/glm-0.9.9.8/;dependencies/vk-bootstrap-0.7/;dependencies/glfw-3.3.8.bin.WIN64/include/;dependencies/VulkanSDK-1.3.250.1/include/;dependencies/tinyobjloader-release-7212023/;dependencies/VulkanMemoryAllocator-3.0.1/;dependencies/meshoptimizer-0.19/;dependencies/stb-image-2.28/;$(VC_IncludePath);$(WindowsSDK_IncludePath);;$(IncludePath)</IncludePath>
     <LibraryPath>dependencies/glfw-3.3.8.bin.WIN64/lib-vc2019/;dependencies/VulkanSDK-1.3.250.1/;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -179,6 +179,7 @@
     <ClCompile Include="job_system.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="rendering_util.cpp" />
+    <ClCompile Include="stb_image_impl.cpp" />
     <ClCompile Include="util.cpp" />
     <ClCompile Include="vk_mem_alloc_impl.cpp" />
     <ClCompile Include="vulkan_renderer.cpp" />
